--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Inter&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700;800&display=swap" rel="stylesheet">
   </head>
   
   <body>
@@ -72,7 +76,7 @@
    
     <div id="button">  
       <a href="Hobby.html">
-        <span>Illustration/Hobby</span>
+        <span>Illustration</span>
         <div class="wave"></div>
       </a>
       </div>    
